--- a/cartas/templates/home.html
+++ b/cartas/templates/home.html
@@ -10,6 +10,11 @@
             Carta para Compartir
           </a>
         </li>
+        <li class=' flex justify-center items-center rounded-md min-h-[5rem] bg-pink-300 w-auto p-4 overflow-hidden text-xl text-center | sm:text-2xl transition-all | hover:scale-110 hover:bg-pink-200 hover:cursor-pointer '>
+          <a href="{% url 'pillados' %}">
+            Mis Regalos Pillados
+          </a>
+        </li>
         <li class=' flex justify-center items-center rounded-md min-h-[5rem] bg-green-300 w-auto p-4 overflow-hidden text-xl text-center | sm:text-2xl transition-all | hover:scale-110 hover:bg-green-200 hover:cursor-pointer  '>
           <a href="{% url 'editor' %}">Editar mi Carta</a>
         </li>
