FIX estilos varios y formularios de inicio y registro

--- a/cartas/templates/carta.html
+++ b/cartas/templates/carta.html
@@ -10,7 +10,7 @@
   </h3>
 </section>
 <section
-  class="bg-emerald-100/75 | min-w-full | text-black | p-7 | flex | flex-1 | flex-col | gap-4 | justify-center | items-center"
+  class="bg-blue-100/90 | min-w-full | text-black | p-7 | flex | flex-1 | flex-col | gap-4 | justify-center | items-center"
 >
   <h2 class="text-2xl">Carta de {{usuario_carta.username}}:</h2>
   <section
