--- a/cartas/templates/layout.html
+++ b/cartas/templates/layout.html
@@ -50,7 +50,7 @@
               <a href="/">Inicio</a>
             </li>
           </ul>
-          <ul class="flex flex-row justify-end gap-2 | sm:gap-4">
+          <ul class="flex flex-col justify-end gap-2 | sm:gap-4 sm:flex-row">
             {% if user.is_authenticated %}
             <li
               class="rounded-full | bg-red-500 | text-slate-50 | w-auto p-4 overflow-hidden text-xl | sm:text-2xl | transition-all | hover:scale-110 hover:bg-red-400 hover:cursor-pointer"
