--- a/cartas/templates/login.html
+++ b/cartas/templates/login.html
@@ -1,36 +1,40 @@
 {% extends "layout.html" %} {%block content%}
 <div>
-  <span class="text-red-500 text-xl font-bold">{{error}}</span>
+  <span class="text-red-500 text-xl font-bold"></span>
 </div>
 
-<form method='POST'>
+<form
+  method="POST"
+  class="flex flex-col justify-center items-center gap-4"
+>
   {% csrf_token %}
-  {{form}}
-  <button>iniciar sesión</button>
+  <div class="flex flex-col justify-center items-center gap-4">
+  <h2 class="text-red-500 text-xl font-semibold">{{error}}</h2>
+
+    <label for="username"
+      >
+      <input
+        type="text"
+        name="username"
+        id="username"
+        placeholder="Usuario"
+        class="bg-slate-200 text-xl p-2 rounded-md"
+      />
+    </label>
+    <label for="password"
+      >
+      <input
+        type="password"
+        name="password"
+        id="password"
+        placeholder="Contraseña"
+        class="bg-slate-200 text-xl p-2 rounded-md"
+      />
+    </label>
+  </div>
+  <button class="bg-green-600 p-4 text-white font-semibold rounded-md">
+    iniciar sesión
+  </button>
 </form>
 
-
-
-
-{% comment %} <form method='POST' class="flex flex-col justify-center items-center gap-4 h-full">
-  {% csrf_token %}
-  <input
-    type="text"
-    name="username"
-    placeholder="Usuario"
-    class="bg-slate-200 text-xl p-2 rounded-md"
-  />
-  <input
-    type="password"
-    name="password"
-    placeholder="contraseña"
-    class="bg-slate-200 text-xl p-2 rounded-md"
-  />
-  <button
-    type="submit"
-    class="bg-green-600 p-4 text-white font-semibold rounded-md"
-  >
-    Iniciar Sesión
-  </button>
-</form> {% endcomment %}
 {% endblock %}
