--- a/cartas/templates/pillados.html
+++ b/cartas/templates/pillados.html
@@ -2,7 +2,7 @@
 
 
 <section
-  class="bg-emerald-100/75 | min-w-full | text-black | p-7 | flex | flex-1 | flex-col | gap-4 | justify-center | items-center"
+  class="bg-pink-100/90 | min-w-full | text-black | p-7 | flex | flex-1 | flex-col | gap-4 | justify-center | items-center"
 >
 <h2 class="text-2xl">Regalos pillados por ti:</h2>
 
