--- a/cartas/templates/carta.html
+++ b/cartas/templates/carta.html
@@ -14,7 +14,7 @@
 >
   <h2 class="text-2xl">Carta de {{usuario_carta.username}}:</h2>
   <section
-    class="grid | grid-cols-1 | gap-4 | w-full | max-w-5xl || sm:grid-cols-2 md:grid-cols-3"
+    class="grid | grid-cols-1 | justify-items-center | gap-4 | w-full | max-w-5xl || sm:grid-cols-2 md:grid-cols-3"
   >
     {% for producto in productos %}
     <article
@@ -65,10 +65,10 @@
             </div>
             {% endfor %}
           </div>
-          <button class="prev bg-orange-500 text-zinc-900 font-header">
+          <button class="prev bg-orange-500/50 text-zinc-900 font-header">
             &lt;
           </button>
-          <button class="next bg-orange-500 text-zinc-900 font-header">
+          <button class="next bg-orange-500/50 text-zinc-900 font-header">
             &gt;
           </button>
         </section>
