--- a/cartas/templates/pillados.html
+++ b/cartas/templates/pillados.html
@@ -7,7 +7,7 @@
 <h2 class="text-2xl">Regalos pillados por ti:</h2>
 
   <section
-    class="grid | grid-cols-1 | gap-4 | w-full | max-w-5xl || sm:grid-cols-2 md:grid-cols-3"
+    class="grid | grid-cols-1 |  justify-items-center | gap-4 | w-full | max-w-5xl || sm:grid-cols-2 md:grid-cols-3"
   >
     {% for producto in productos %}
     <article
@@ -59,10 +59,10 @@
             </div>
             {% endfor %}
           </div>
-          <button class="prev bg-orange-500 text-zinc-900 font-header">
+          <button class="prev bg-orange-500/50 text-zinc-900 font-header">
             &lt;
           </button>
-          <button class="next bg-orange-500 text-zinc-900 font-header">
+          <button class="next bg-orange-500/50 text-zinc-900 font-header">
             &gt;
           </button>
         </section>
