--- a/cartas/templates/editor.html
+++ b/cartas/templates/editor.html
@@ -308,10 +308,12 @@
           class="flex flex-col justify-between items-center gap-6 w-300 p-20 bg-white rounded-lg shadow-md"
         >
           <form
-            method="POST"
+          action="{% url 'editar_producto' %}"
+          method="POST"
             class="flex flex-col justify-center items-center gap-4 h-full"
           >
             {% csrf_token %}
+            <input name='product-id' type="text" readonly hidden value="{{producto.id}}">
 
             <h3 class="text-2xl">EDITAR PRODUCTO</h3>
 
