--- a/cartas/templates/editor.html
+++ b/cartas/templates/editor.html
@@ -155,7 +155,7 @@
         </button>
         <dialog
           data-id="{{producto.id}}"
-          class="dialog_links rounded-lg shadow-md"
+          class="dialog_links rounded-lg shadow-md h-full max-h-[40rem]"
         >
           <div
             class="flex flex-col justify-between items-center gap-6 w-300 p-20 bg-white rounded-lg shadow-md"
@@ -302,7 +302,7 @@
       </div>
       <dialog
         data-id="{{producto.id}}"
-        class="dialog_editar rounded-lg shadow-md"
+        class="dialog_editar rounded-lg shadow-md h-full max-h-[40rem]"
       >
         <section
           class="flex flex-col justify-between items-center gap-6 w-300 p-20 bg-white rounded-lg shadow-md"
@@ -551,7 +551,8 @@
   <span class="text-red-500 text-xl font-bold">{{error}}</span>
 </div>
 
-<dialog id="PopupFormAnadirProducto">
+<dialog id="PopupFormAnadirProducto" class="rounded-lg shadow-md h-full max-h-[40rem]"
+>
   <form
     action="{% url 'crear_producto' %}"
     class="flex flex-col justify-center items-center gap-4 p-4 max-w-[30rem] h-full"
