--- a/cartas/templates/editor.html
+++ b/cartas/templates/editor.html
@@ -14,11 +14,11 @@
 >
   <h2 class="text-2xl">Carta de {{user.username}}:</h2>
   <section
-    class="grid | grid-cols-1 | justify-items-center | gap-4 | w-full | max-w-5xl || sm:grid-cols-2 md:grid-cols-3"
-  >
+    class="flex-1 | grid | grid-cols-1 | justify-items-center | gap-4 | w-full | max-w-5xl || sm:grid-cols-2 md:grid-cols-3"
+    >
     {% for producto in productos %}
     <article
-      class="bg-gray-200 | border-slate-300 | border-2 | p-6 | rounded-xl | flex | flex-col | justify-between | gap-4 | w-full | h-full | max-w-xs | relative"
+      class="bg-gray-200 | border-slate-300 | border-2 | p-6 | rounded-xl | flex | flex-col | justify-between | gap-4 | w-full | max-w-xs | relative"
     >
       <button
         data-id="{{producto.id}}"
@@ -508,7 +508,7 @@
   </section>
   <div
     class="bg-slate-50 p-4 rounded-lg text-xl flex gap-2 justify-center items-center"
-  >
+    >
     Puedes añadir cosas a tu carta haciendo click aquí:
     <button id="BotonAnadirProducto">
       <svg
