--- a/cartas/static/css/global.css
+++ b/cartas/static/css/global.css
@@ -25,6 +25,9 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+  &:has(dialog[open]) {
+    overflow: hidden;
+  }
 }
 
 .slick-prev:before,
