--- a/cartas/templates/editor.html
+++ b/cartas/templates/editor.html
@@ -18,7 +18,7 @@
       class="bg-gray-200 | border-slate-300 | border-2 | p-6 | rounded-xl | flex | flex-col | justify-between | gap-4 | w-full | max-w-xs | relative">
       <button
         data-id="{{producto.id}}"
-        class="open_popup_editar bg-yellow-50 | rounded-full | w-12 | h-12 | absolute | top-0 | right-0 | flex justify-center items-center">
+        class="open_popup_editar bg-yellow-50 | rounded-full | w-12 | h-12 | absolute | top-10 | right-10 | flex justify-center items-center">
         <svg
           version="1.1"
           id="Layer_1"
@@ -262,9 +262,9 @@
       </div>
       <dialog
         data-id="{{producto.id}}"
-        class="dialog_editar rounded-lg shadow-md h-auto">
+        class="dialog_editar rounded-lg shadow-md h-[90vh]">
         <section
-          class="flex flex-col justify-between items-center gap-6 w-300 p-20 bg-white rounded-lg shadow-md">
+          class="flex flex-col justify-between items-center gap-6 w-300 px-20 py-10 pt-20 bg-white rounded-lg shadow-md">
           <form
             action="{% url 'editar_producto' %}"
             method="POST"
@@ -279,7 +279,7 @@
 
             <h3 class="text-2xl">EDITAR PRODUCTO</h3>
 
-            <div class="flex-1 | flex flex-col justify-center items-center gap-4 overflow-scroll">
+            <div class="flex flex-col justify-center items-center gap-4 overflow-auto">
               <h2 class="text-red-500 text-xl font-semibold">{{error}}</h2>
               <label
                 for="id_name"
@@ -298,7 +298,7 @@
               <label
                 for="id_links"
                 class="flex flex-col justify-between items-center text-lg pt-2 w-full">
-                Enlaces (separados por comas):
+                Enlaces:
                 <textarea
                   hidden
                   name="links"
@@ -324,7 +324,7 @@
               <label
                 for="id_images"
                 class="flex flex-col justify-between items-center text-lg pt-2 w-full">
-                Imágenes (separados por comas):
+                Imágenes:
                 <textarea
                   hidden
                   name="images"
@@ -379,7 +379,7 @@
 
           <button
             data-id="{{producto.id}}"
-            class="close_popup_editar absolute right-0 top-0">
+            class="close_popup_editar absolute right-10 top-10">
             <svg
               viewBox="0 0 24 24"
               width="44"
@@ -578,7 +578,7 @@
 
   <button
     onclick="document.getElementById('PopupFormAnadirProducto').close()"
-    class="absolute right-0 top-0">
+    class="absolute right-10 top-10">
     <svg
       viewBox="0 0 24 24"
       width="44"
