FIX estilos scroll y boton editar

--- a/cartas/templates/editor.html
+++ b/cartas/templates/editor.html
@@ -279,7 +279,7 @@
 
             <h3 class="text-2xl">EDITAR PRODUCTO</h3>
 
-            <div class="flex flex-col justify-center items-center gap-4 overflow-auto">
+            <div class="flex flex-col items-center gap-4 overflow-auto">
               <h2 class="text-red-500 text-xl font-semibold">{{error}}</h2>
               <label
                 for="id_name"
@@ -379,7 +379,7 @@
 
           <button
             data-id="{{producto.id}}"
-            class="close_popup_editar absolute right-10 top-10">
+            class="close_popup_editar absolute right-1 top-1">
             <svg
               viewBox="0 0 24 24"
               width="44"
@@ -578,7 +578,7 @@
 
   <button
     onclick="document.getElementById('PopupFormAnadirProducto').close()"
-    class="absolute right-10 top-10">
+    class="absolute right-1 top-1">
     <svg
       viewBox="0 0 24 24"
       width="44"
