--- a/cartas/templates/editor.html
+++ b/cartas/templates/editor.html
@@ -18,7 +18,7 @@
       class="bg-gray-200 | border-slate-300 | border-2 | p-6 | rounded-xl | flex | flex-col | justify-between | gap-4 | w-full | max-w-xs | relative">
       <button
         data-id="{{producto.id}}"
-        class="open_popup_editar bg-yellow-50 | rounded-full | w-12 | h-12 | absolute | top-0 | right-0 | flex justify-center items-center">
+        class="open_popup_editar bg-yellow-50 | rounded-full | w-auto | aspect-square | absolute | top-1 | right-1 | flex justify-center items-center">
         <svg
           version="1.1"
           id="Layer_1"
