--- a/cartas/templates/layout.html
+++ b/cartas/templates/layout.html
@@ -38,34 +38,52 @@
   <body class="text-zinc-900">
     <div class="bg-orange-200 min-h-screen flex flex-col">
       <header
-        class="text-black | font-header | pb-8 | flex | flex-col | justify-between | items-center | gap-7"
-      >
+        class="text-black | font-header | pb-8 | flex | flex-col | justify-between | items-center | gap-7">
         <nav
-          class="bg-orange-300/75 p-4 | w-full flex flex-row justify-between gap-2"
-        >
+          class="bg-orange-300/75 p-4 | w-full flex flex-row justify-between gap-2">
           <ul class="flex flex-row justify-end gap-4">
             <li
-              class="flex justify-center items-center rounded-full bg-slate-50 w-auto p-4 overflow-hidden text-xl | sm:text-2xl | transition-all | hover:scale-110 hover:cursor-pointer"
-            >
-              <a href="/">Inicio</a>
+              class="flex justify-center items-center rounded-full bg-slate-50 w-auto p-4 overflow-hidden text-xl | sm:text-2xl | transition-all | hover:scale-110 hover:cursor-pointer">
+              <a class="hidden sm:block" href="/">Inicio</a>
+              <a class="block sm:hidden" href="/">
+                <svg
+                  width="32px"
+                  height="32px"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg">
+                  <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                  <g
+                    id="SVGRepo_tracerCarrier"
+                    stroke-linecap="round"
+                    stroke-linejoin="round">
+                  </g>
+                  <g id="SVGRepo_iconCarrier">
+                    <path
+                      d="M5 9.77746V16.2C5 17.8802 5 18.7203 5.32698 19.362C5.6146 19.9265 6.07354 20.3854 6.63803 20.673C7.27976 21 8.11984 21 9.8 21H14.2C15.8802 21 16.7202 21 17.362 20.673C17.9265 20.3854 18.3854 19.9265 18.673 19.362C19 18.7203 19 17.8802 19 16.2V5.00002M21 12L15.5668 5.96399C14.3311 4.59122 13.7133 3.90484 12.9856 3.65144C12.3466 3.42888 11.651 3.42893 11.0119 3.65159C10.2843 3.90509 9.66661 4.59157 8.43114 5.96452L3 12"
+                      stroke="#000000"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round">
+                    </path>
+                  </g>
+                </svg>
+              </a>
             </li>
           </ul>
           <ul class="flex flex-col justify-end gap-2 | sm:gap-4 sm:flex-row">
             {% if user.is_authenticated %}
             <li
-              class="rounded-full | bg-red-500 | text-slate-50 | w-auto p-4 overflow-hidden text-xl | sm:text-2xl | transition-all | hover:scale-110 hover:bg-red-400 hover:cursor-pointer"
-            >
+              class="rounded-full | bg-red-500 | text-slate-50 | w-auto p-4 overflow-hidden text-xl | sm:text-2xl | transition-all | hover:scale-110 hover:bg-red-400 hover:cursor-pointer">
               <a href="{% url 'logout' %}">Cerrar Sesión</a>
             </li>
             {% else %}
             <li
-              class="flex justify-center items-center text-center rounded-full bg-green-200 w-auto p-4 overflow-hidden text-xl | sm:text-2xl | transition-all | hover:scale-110 hover:bg-green-100 hover:cursor-pointer"
-            >
+              class="flex justify-center items-center text-center rounded-full bg-green-200 w-auto p-4 overflow-hidden text-xl | sm:text-2xl | transition-all | hover:scale-110 hover:bg-green-100 hover:cursor-pointer">
               <a href="{% url 'login' %}">Iniciar Sesión</a>
             </li>
             <li
-              class="flex justify-center items-center rounded-full bg-blue-200 w-auto p-4 overflow-hidden text-xl | sm:text-2xl | transition-all | hover:scale-110 hover:bg-blue-100 hover:cursor-pointer"
-            >
+              class="flex justify-center items-center rounded-full bg-blue-200 w-auto p-4 overflow-hidden text-xl | sm:text-2xl | transition-all | hover:scale-110 hover:bg-blue-100 hover:cursor-pointer">
               <a href="{% url 'registro' %}">Registarse</a>
             </li>
             {% endif %}
@@ -75,8 +93,7 @@
         <img
           src="https://fotografias.lasexta.com/clipping/cmsimages01/2021/01/05/DAE96D97-478A-4926-9ED6-CEC0E49AE108/default.jpg?crop=1300,731,x0,y12&width=1900&height=1069&optimize=low"
           alt="imagen de los tres reyes magos"
-          class="w-11/12 | h-full | m-4 | object-contain | object-center | rounded-2xl | md:object-cover md:h-[30rem]"
-        />
+          class="w-11/12 | h-full | m-4 | object-contain | object-center | rounded-2xl | md:object-cover md:h-[30rem]" />
       </header>
 
       <main class="flex flex-col flex-1 justify-center items-center">
@@ -84,8 +101,7 @@
       </main>
 
       <footer
-        class="| text-black | p-7 | flex | flex-col | justify-center | items-center"
-      >
+        class="| text-black | p-7 | flex | flex-col | justify-center | items-center">
         <p>2024 &copy;Pedro J.</p>
       </footer>
     </div>
