--- a/cartas/templates/layout.html
+++ b/cartas/templates/layout.html
@@ -36,11 +36,11 @@
     <script src="{%static 'js/script.js'%}" defer></script>
   </head>
   <body class="text-zinc-900">
-    <div class="bg-orange-200 min-h-screen flex flex-col">
+    <div class="bg-orange-100 min-h-screen flex flex-col">
       <header
         class="text-black | font-header | pb-8 | flex | flex-col | justify-between | items-center | gap-7">
         <nav
-          class="bg-orange-300/75 p-4 | w-full flex flex-row justify-between gap-2">
+          class="bg-orange-300 p-4 | w-full flex flex-row justify-between gap-2">
           <ul class="flex flex-row justify-end gap-4">
             <li
               class="flex justify-center items-center rounded-full bg-slate-50 w-auto p-4 overflow-hidden text-xl | sm:text-2xl | transition-all | hover:scale-110 hover:cursor-pointer">
@@ -71,7 +71,7 @@
               </a>
             </li>
           </ul>
-          <ul class="flex flex-col justify-end gap-2 | sm:gap-4 sm:flex-row">
+          <ul class="flex flex-row justify-end gap-2 | sm:gap-4">
             {% if user.is_authenticated %}
             <li
               class="rounded-full | bg-red-500 | text-slate-50 | w-auto p-4 overflow-hidden text-xl | sm:text-2xl | transition-all | hover:scale-110 hover:bg-red-400 hover:cursor-pointer">
